tests/cfg/js/success/compile_switch1.js
lab: switch("1") {
case 1:
"1"
case 2:
"2";
case 3:
"3";
break;
case 4:
"4";
break lab;
}
