tests/cfg/js/error/astRewrite/ast_disamb2.js
while (true) {
  done:
    done: {
      continue done;
    }
    continue empty;
}

break;

switch (3) {
 default : break;
}
